# acdc-hst

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .rtd-requirements.txt  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  acdc.py  calculate_dark.py  compare_backgrounds.py  connect_db.py  convert_superdark.py  cos_dark.db  cos_fuv_superdark.py  create_db.py  create_superdark.py  dashboard_plot.ipynb  expon.py  expon_readdb_noplt.py  hv_vs_modalgain.py  make_clean_superdark.py  make_darkevents_index.py  make_superdark.py  plot_2d_darks.ipynb  plot_dark_vs_time.ipynb  predict_dark_level1.py  pyproject.toml  query_cos_dark.py  query_dark_events.py  query_darks.py  saa_distance.py  schema.py  settings.yaml  setup.cfg  setup.py  subtr_standard.py  subtr_standard_orig.py  update_db.py  utils.py  (+1 more)
.github/workflows/: python-publish.yml
acdc/: acdc.py  dark_correction.py  predict_dark_level.py  predict_dark_level1.py  predict_dark_level1_orig.py  run_acdc.py  subtr_standard.py  subtract_dark_level.py
acdc/analysis/: analyze_correction.py  coadd_x1ds.py  compare_backgrounds.py  compare_x1ds.py  hv_vs_modalgain.py  niceplot.mplstyle  plot_2d_darks.ipynb  plot_dark_vs_time.ipynb
acdc/data/: summary_163_segA.txt  summary_163_segB.txt  summary_167_segA.txt  summary_167_segB.txt  summary_169_segA.txt  summary_169_segB.txt  summary_175_segB.txt
acdc/database/: calculate_dark.py  connect_db.py  create_db.py  darkevents_schema.py  make_darkevents_index.py  observed-solar-cycle-indices.json  query_cos_dark.py  query_dark_events.py  saa_distance.py  update_db.py  within_saa.py
acdc/superdark/: cos_fuv_superdark.py  create_superdark.py  download_superdarks.py  make_clean_superdark.py  make_superdark.py
acdc/utils/: niceplot.mplstyle  utils.py
docs/: about.rst  api.rst  conf.py  databases.rst  index.rst  install.rst  mysql_darkeventshv.csv  sqlite_darks.csv  sqlite_solar.csv  usage.rst
src/acdc/: dark_correction.py  run_acdc.py
src/acdc/analysis/: analyze_correction.py  coadd_x1ds.py  compare_backgrounds.py  explore_dark_dependencies.ipynb  hv_vs_modalgain.py  plot_2d_darks.ipynb
src/acdc/data/: summary_163_segA.txt  summary_163_segB.txt  summary_167_segA.txt  summary_173_segA.txt  summary_178_segA.txt
src/acdc/database/: query_cos_dark.py  saa_distance.py  saa_models.py  schema.py
src/acdc/superdark/: convert_superdark.py  cos_fuv_superdark.py  download_superdarks.py
src/acdc/utils/: expon_readdb.py
src/tests/: test_dark_correction.py
