[metadata]
name = acdc
version = 1.0
description = Software to perform optimized COS/FUV dark correction 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jotaylor/cos_dark
author = Jo Taylor
author_email = jotaylor@stsci.edu
license = BSD 3-clause
license_file = LICENSE
keywords = 
    astronomy
    hst
    hubble
    cos
    ultraviolet
    uv
    dark
    instrumentation
    calibration
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://github.com/jotaylor/cos_dark
    Source = https://github.com/jotaylor/cos_dark
    Tracker = https://github.com/jotaylor/cos_dark/issues

[options]
;zip_safe = False
python_requires = >=3.9
packages = acdc
platforms = any
install_requires =
    asdf
    astropy
    bokeh>=2.1.1
    dask
    datashader>=0.13.0
    holoviews>=1.14.4
    matplotlib
    numpy
    pandas
    panel>=0.11.3
    pymysql
    pyyaml
    sqlalchemy


