[metadata]
name = acdc
version = 1.0
description = Software to perform optimized COS/FUV dark correction 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jotaylor/cos_dark
author = Jo Taylor
author_email = jotaylor@stsci.edu
license = BSD 3-clause
license_file = LICENSE
keywords = 
    astronomy
    hst
    hubble
    cos
    ultraviolet
    uv
    dark
    instrumentation
    calibration
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://github.com/jotaylor/cos_dark
    Source = https://github.com/jotaylor/cos_dark
    Tracker = https://github.com/jotaylor/cos_dark/issues

[options]
;zip_safe = False
python_requires = >=3.9
packages = find:
platforms = any
install_requires =
    asdf
    astropy
    bokeh>=2.1.1
    calcos
    crds
    dask
    datashader>=0.13.0
    holoviews>=1.14.4
    shapely
    matplotlib
    numpy
    pandas
    panel>=0.11.3
    pymysql
    pyyaml
    sqlalchemy
    ullyses
    wget

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    acdc = acdc.run_acdc:acdc_parser
    make_all_superdarks = acdc.superdark.create_superdark:all_hvs
    download_superdarks = acdc.superdark.download_superdarks:download_parser
    coadd = acdc.analysis.coadd_x1ds:coadd_parser
